Improve table presentation

--- a/index.html
+++ b/index.html
@@ -46,8 +46,20 @@
 
 <div>
     <h3>Loading Data using AJAX and processing in JavaScript</h3>
-    <p>We can use JavaScript to process what we loaded. Open js/main.js in an editor</p>
-    <table id="my-table"></table>
+    <p>We can use JavaScript to load and process data.</p>
+    <p>This data was loaded by an AJAX call and added to the HTML in a table by my custom JavaScript code.</p>
+    <p>Open <code>js/main.js</code> in your editor to see.</p>
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>Number</th>
+                <th>Square</th>
+            </tr>
+        </thead>
+        <tbody id="my-table-body">
+
+        </tbody>
+    </table>
 </div>
 
 </div>
