--- a/ajax/largeText.html
+++ b/ajax/largeText.html
@@ -1,8 +1,8 @@
 <html>
 <p id="part-we-want">
-    This a is some text that was loaded from the server!
+    This is some text that was loaded from the server!
 </p>
 <p id="part-we-dont-want">
-    This a is some more text that was loaded from the server!
+    This is some more text that was loaded from the server!
 </p>
 </html>
